# ai-ml-interview

./: heat_retention_ml_q.md  llm_in_the_loop.py  main.py  one_d_heat_eq.py  pyproject.toml
