[project]
name = "ai-ml-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.pyright]
venv = ".venv"
venvPath = "."

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-pretty>=1.3.0",
    "ruff>=0.12.12",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 100
indent-width = 4

# Assume Python 3.12+
target-version = "py312"

[tool.ruff.lint]
# Enable comprehensive linting rules including modern typing syntax
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "UP",    # pyupgrade (including modern typing syntax)
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "I",     # isort
    "N",     # pep8-naming
    "C4",    # flake8-comprehensions
    "PTH",   # flake8-use-pathlib
    "T20",   # flake8-print
    "PIE",   # flake8-pie
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "ICN",   # flake8-import-conventions
]

ignore = [
    "E501",   # line too long, handled by formatter
    "T201",   # print found (we use print in examples)
    "T203",   # pprint found
    "N806",  # variable in function should be lowercase
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
